--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-    <title>Game Name</title>
+    <title>Earn to Die</title>
   </head>
   <body>
     <div style="text-align: center;">
-    <embed src="insert.swf" width="100%" height="100%">
+    <embed src="insert.swf" width="1020" height="630">
     </div>
     <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
   </body>
